# lvdb

./: .gitignore  README.md  app.py  constants.py  persistence.py  pyproject.toml  scalar_storage.py  schemas.py  test.http  vector_database.py
demo/image-search/: README.md  app.py  client.py  image_eb.py
demo/image-search/static/: script.js
demo/image-search/templates/: index.html
demo/knowledge-base/: README.md  app.py  client.py  markdown_processor.py
demo/knowledge-base/static/: script.js
demo/knowledge-base/templates/: index.html
indexes/: faiss_index.py  filter_index.py  hnsw_index.py  index_factory.py
master-server/: README.md  master_server.py  test.http
proxy-server/: proxy-server.py  test.http
tests/: faiss_example.py  hnsw_example.py
tests.http/: admin.http  filter.http  upsert-query.http
