[project]
name = "lvdb"
version = "0.1.0"
description = "LVDB Project"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=0.19.0",
    "faiss-cpu>=1.8.0.post1",
    "numpy>=1.24.4",
    "pytest>=8.3.4",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
