[project]
name = "lvdb"
version = "0.1.0"
description = "LVDB Project"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "fastapi>=0.115.7",
    "hnswlib>=0.8.0",
    "numpy>=2.2.2",
    "pip>=25.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "rocksdict>=0.3.25",
    "uvicorn>=0.34.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
