[project]
name = "lvdb"
version = "0.1.0"
description = "LVDB Project"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "fastapi>=0.115.7",
    "hnswlib>=0.8.0",
    "pip>=25.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pyroaring>=1.0.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "rocksdict>=0.3.25",
    "uvicorn>=0.34.0",
    "numpy>=1.24.4,<2.0.0",
    "etcd3>=0.12.0",
    "httpx>=0.28.1",
    "asyncio>=3.4.3",
]

[[project.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
type = "find-links"

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
